Added a loading screen to the Web Page

--- a/scripts/static/index.html
+++ b/scripts/static/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-	<div class='main_content'>
+	<div class="spinner">
+	  <div class="rect1"></div>
+	  <div class="rect2"></div>
+	  <div class="rect3"></div>
+	  <div class="rect4"></div>
+	  <div class="rect5"></div>
+	</div>
+	
+	<div class='main_content' style='display: none;'>
 		<div>
 			<div id='current_weather' class='primary_weather'>
 				<i class="weather wi wi-day-lightning"></i>				
